--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "faker": "^5.5.3",
     "firebase": "^9.6.7",
+    "html-react-parser": "^3.0.4",
     "js-cookie": "^3.0.1",
     "jsonp": "^0.2.1",
     "lodash": "4.17",
