--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "semantic-ui-react": "^2.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^7.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
