ProductVariant Issue Fixed + Clear Cache Function Added

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_HOST = https://backend.kees.qa
+# REACT_APP_BACKEND_HOST = https://staging-backend.kees.qa
 SKIP_PREFLIGHT_CHECK = true
